--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -11,7 +11,7 @@
     box-sizing: border-box;
 }
 html {
-    font-size: 62.5%;
+    // font-size: 62.5%;
 }
 body {
     font-family: 'Montserrat', sans-serif;
