--- a/src/layouts/MainLayout/MainLayout.module.scss
+++ b/src/layouts/MainLayout/MainLayout.module.scss
@@ -1,15 +1,18 @@
 .wrapper {
     display: flex;
-    
+    height: 100vh;
+    overflow: hidden;
 }
 .left {
     width: 18%;
     // min-width: 250px;
     background-color:rgb(98 103 207 / 50%);
-    min-height: 100vh;
+    height: 100vh;
 }
 .right {
     width: 82%;
+    overflow: scroll;
+    // height: 100vh;
 }
 .header-nav {
     display: flex;
