--- a/src/layouts/MainLayout/MainLayout.module.scss
+++ b/src/layouts/MainLayout/MainLayout.module.scss
@@ -19,8 +19,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
     
 }
+
 .header-text {
     flex: 1;
     font-size: 2rem;
